welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:3: error: too many arguments for method baisseBrosse: ()Unit
baisseBrosse(Color:lightGray)
            ^PictureMono:4: error: not found: value faireV
faireV();
^